--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    <button id="reset-btn">RESET</button>
 </main> 
 <!-- <script src="main.js"></script> -->
-<script src="js_practice_copy.js"></script>
+<script src="main.js"></script>
 <p>🛳️</p>
 </body>
 
